objects/ssot__ConversationEntryTranscriptExcerpt__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConversationEntryId__c</fullName>
        <label>Conversation Entry</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationIntentStatus__c</fullName>
        <label>Conversation Intent Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationReasonId__c</fullName>
        <label>Conversation Reason</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationInSeconds__c</fullName>
        <label>Duration In Seconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessageId__c</fullName>
        <label>Email Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExcerptSequenceNumber__c</fullName>
        <label>Excerpt Sequence Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExcerptTextIndexText__c</fullName>
        <label>Excerpt Text Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Conversation Entry Transcript Excerpt Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMoved__c</fullName>
        <label>Moved</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessagingSessionId__c</fullName>
        <label>Messaging Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TranscriptExcerptText__c</fullName>
        <label>Transcript Excerpt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TranscriptSourceId__c</fullName>
        <label>Transcript Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TranscriptSourceObject__c</fullName>
        <label>Transcript Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TurnCount__c</fullName>
        <label>Turn Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallId__c</fullName>
        <label>Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009487088_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntryTranscriptExcerpt_E_rel</label>
        <referenceTo>ssot__EmailMessage__dlm</referenceTo>
        <relationshipLabel>ConversationEntryTranscriptExcerpt_E_rel</relationshipLabel>
        <relationshipName>rel_1702009487088_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009487670_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntryTranscriptExcerpt_C_rel</label>
        <referenceTo>ssot__ConversationEntry__dlm</referenceTo>
        <relationshipLabel>ConversationEntryTranscriptExcerpt_C_rel</relationshipLabel>
        <relationshipName>rel_1702009487670_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726629568_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntryTranscriptExcerpt_T_rel</label>
        <referenceTo>ssot__EmailMessage__dlm</referenceTo>
        <relationshipLabel>ConversationEntryTranscriptExcerpt_T_rel</relationshipLabel>
        <relationshipName>rel_1716726629568_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>